<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:apb="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.activities.MainActivity"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:gravity="center"
        android:id="@+id/rl_container">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_quantion"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:id="@+id/iv_logo"
            android:layout_marginBottom="64dp" />

        <TextView
            android:id="@+id/login_label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IDENTIFIER_TITLE_STRING"
            android:textSize="@dimen/title_text_size"
            android:textColor="@android:color/black"
            android:layout_below="@+id/iv_logo" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/subtitle_text_size"
            android:hint="@string/IDENTIFIER_PLACEHOLDER_STRING"
            android:textColor="@color/blue_quantion"
            android:layout_below="@+id/login_label_email"
            />

        <TextView
            android:id="@+id/login_label_password"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PASSWORD_TITLE_STRING"
            android:textSize="@dimen/title_text_size"
            android:textColor="@android:color/black"
            android:layout_below="@+id/login_email" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="@dimen/subtitle_text_size"
            android:hint="@string/PASSWORD_PLACEHOLDER_STRING"
            android:textColor="@color/blue_quantion"
            android:layout_below="@+id/login_label_password"
            android:typeface="normal"
            />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="16dp"
            android:text="@string/LOGIN_BUTTON_STRING"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_text_size"
            apb:pb_colorComplete="@color/green_complete"
            apb:pb_colorNormal="@color/blue_normal"
            apb:pb_colorPressed="@color/blue_pressed"
            apb:pb_colorProgress="@color/purple_progress"
            apb:pb_textComplete="@string/LGN_SUCCESS"
            apb:pb_textProgress="@string/LGN_AUTHENTICATING"
            apb:pb_textError="@string/LGN_ERROR"
            apb:pb_colorError="@color/red_error"
            android:layout_below="@+id/login_password"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

    </RelativeLayout>

</RelativeLayout>

